Fixed white spaces at bottom and right

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,12 +40,13 @@
 #glass {
   background: #282c34;
   min-height: 90vh;
-  max-height: 600px;
+  max-height: 500px;
   overflow-y: scroll;
 }
 
 #page {
   background: rgb(12, 12, 12);
+  min-height: 100vh;
 }
 
 #choice {
